Fix issue where cards did not align correctly on learn page

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -543,6 +543,7 @@ p {
 .card {
   float: none;
   border-radius: 8px;
+  height: 100%;
 }
 .tagging {
   display: inline-flex;
